<resources>
    <string name="app_name">My Chat App</string>
    <string name="dashboard">Dashboard</string>
    <string name="registration">Registration</string>
    <string name="messages">Messages</string>

    <string name="userName">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an Account!</string>
    <string name="signout">Signout</string>
    <string name="setting">Setting</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="update">Update</string>
    <string name="recent_chat">Recent Chat</string>
    <string name="users">Users</string>
    <string name="bio">Bio:</string>
    <string name="select_photo">Select Photo</string>
    <string name="send_message_button">Send Message Button</string>
    <string name="message">message:</string>
    <string name="sender_message">Sender Message</string>
    <string name="reciever_message">Receiver Message</string>
    <string name="edit_detail_icon">Edit Detail Icon</string>
    <string name="update_bio">Update Bio</string>
    <string name="chat">Chat</string>
    <string name="splashloginbtn">splashLogInBtn</string>
    <string name="splashlogoutbtn">splashLogOutBtn</string>
    <string name="logo">Logo</string>
    <string name="create_user">Create User</string>
    <string name="profile">Profile</string>
    <string name="empty_list">Empty List</string>
    <string name="profileFragment">ProfileFragment</string>
    <string name="default_notification_channel_id">ChapApp_Ch_01</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="settings">Settings</string>
    <string name="create_group">Create Group</string>
    <string name="find_friends">Find Friends</string>
    <string name="enter_group_name">Enter Group Name:</string>
    <string name="submit">Submit</string>
    <string name="group">Group</string>
    <string name="contacts">Contacts</string>
    <string name="group_name">Group Name</string>
    <string name="add_member">Add Member</string>
    <string name="exit_group">Exit Group</string>
    <string name="beta_version">The App is in beta version</string>
    <string name="select_icon">Select Icon</string>

</resources>
