<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
            android:id="@+id/menu_find_friends"
            android:title="@string/find_friends"
            android:icon="@drawable/ic_action_signout"
    />

    <item
            android:id="@+id/menu_create_group"
            android:title="@string/create_group"
            android:icon="@drawable/ic_action_signout"
    />

    <item
            android:id="@+id/menu_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_action_signout"
    />

    <item
            android:id="@+id/menu_sign_out"
            android:title="@string/signout"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_action_signout"
    />
</menu>