<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".SplashScreenActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:srcCompat="@drawable/splash_screen_icon"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"
            android:layout_marginTop="32dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/linearLayout">

        <Button
                android:text="@string/login"
                android:id="@+id/splashLogInBtn"
                android:background="@drawable/rounded_button_green"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/splashloginbtn"
                style="@style/splashScreenRoundedButton"/>

        <Button
                android:text="@string/logout"
                android:id="@+id/splashLogOutBtn"
                android:background="@drawable/rounded_button_red"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/splashlogoutbtn"
                style="@style/splashScreenRoundedButton"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>